--- a/src/main/resources/public/pages/manage/tasks.html
+++ b/src/main/resources/public/pages/manage/tasks.html
@@ -106,7 +106,7 @@
 			<div class="content-title" id="queryCondition">
 				<div class="form-inline">
 					<div class="form-group form-group-3">
-						<label class="control-label">用户名:</label>
+						<label class="control-label">任务名称:</label>
 						<input class="form-control" id="userId" type="text"/>
 					</div>
 				</div>
@@ -129,6 +129,7 @@
 					<thead>
 					<tr>
 						<th>序号</th>
+						<th>任务名称</th>
 					    <th>当前的内存使用情况</th>
 						<th>2小时来的内存情况</th>
 						<th>任务运行监控</th>
@@ -138,6 +139,7 @@
 					<tbody>
 						<tr v-for="(tabtr,index) in tabData">
 							<td>{{index+1}}</td>
+							<td>{{tabtr.f}}</td>
 			                <td>总共{{tabtr.a}},使用{{tabtr.b}},剩余{{tabtr.c}}</td>
 			                <td>最小内存{{tabtr.d}},最大内存{{tabtr.e}}</td>
 			                <!-- <td>
